--- a/documentation.html
+++ b/documentation.html
@@ -41,8 +41,8 @@
           <td>Create new products</td>
         </tr>
         <tr>
-          <td>UPDATE</td>
-          <td>Update already existing products</td>
+          <td>PUT</td>
+          <td>Change already existing products</td>
         </tr>
         <tr>
           <td>DELETE</td>
