--- a/documentation.html
+++ b/documentation.html
@@ -170,6 +170,11 @@
           <td>The requested product could not be found.</td>
         </tr>
         <tr>
+          <td>429</td>
+          <td>Too Many Requests</td>
+          <td>User has sent too many requests in a given amount of time.</td>
+        </tr>
+        <tr>
           <td>500</td>
           <td>Internal Server Error</td>
           <td>The server has encountered a situation it doesn't know how to handle.</td>
