--- a/documentation.html
+++ b/documentation.html
@@ -22,7 +22,10 @@
 
   <body>
     <h1>Bedrunka API</h1>
+    <div>
+      Documentation of RESTful API of Bedrunka website. The API uses HTTP 1.1 method for every function it provides.
 
+    </div>
     <h2>Requests</h2>
     <table>
       <thead>
