--- a/documentation.html
+++ b/documentation.html
@@ -64,7 +64,7 @@
 
     <!-- GET -->
     <div>
-      <h3>GET /api/products</h3>
+      <h3>GET api/products</h3>
       <h4>Resource information</h4>
       <table>
         <tbody>
@@ -174,7 +174,7 @@
     
     <!-- PUT -->
     <div>
-      <h3>PUT /api/products</h3>
+      <h3>PUT api/products</h3>
       <h4>Resource information</h4>
       <table>
         <tbody>
@@ -236,7 +236,7 @@
 
     <!-- DELETE -->
     <div>
-      <h3>DELETE /api/products</h3>
+      <h3>DELETE api/products</h3>
       <h4>Resource information</h4>
       <table>
         <tbody>
