--- a/documentation.html
+++ b/documentation.html
@@ -201,8 +201,11 @@
         <br>
         {<br>
           "id": "13123",<br>
-          "product": "Hello There!",<br>
-          "popularity": 8<br>
+          "product": "Cinnamon",<br>
+          "origin": "Egypt",<br>
+          "best_before_date": "June 2021",<br>
+          "amount": "24",<br>
+          "image": "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.dietspotlight.com%2Fwp-content%2Fuploads%2FCinnamon-1.png&f=1&nofb=1"<br>
         }
       </code>
       <h5>Response</h5>
