--- a/documentation.html
+++ b/documentation.html
@@ -56,6 +56,45 @@
       </tbody>
     </table>
 
+    <h2>Responses</h2>
+    <h3>Product</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Key</th>
+          <th>Description</th>
+          <th>Type</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>product</td>
+          <td>The name of the product</td>
+          <td>String</td>
+        </tr>
+        <tr>
+          <td>origin</td>
+          <td>The country of origin of the product</td>
+          <td>String</td>
+        </tr>
+        <tr>
+          <td>best_before_date</td>
+          <td>Expiration date (month year)</td>
+          <td>Date</td>
+        </tr>
+        <tr>
+          <td>amount</td>
+          <td>Amount available in our store</td>
+          <td>Number</td>
+        </tr>
+        <tr>
+          <td>image</td>
+          <td>URL to an image of the product</td>
+          <td>URL</td>
+        </tr>
+      </tbody>
+    </table>
+
     <h2>API Reference</h2>
 
     <!-- GET -->
@@ -267,45 +306,6 @@
         X-Powered-By: Express
       </code>
     </div>
-    
-    <h2>Responses</h2>
-    <h3>Product</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Key</th>
-          <th>Description</th>
-          <th>Type</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>product</td>
-          <td>The name of the product</td>
-          <td>String</td>
-        </tr>
-        <tr>
-          <td>origin</td>
-          <td>The country of origin of the product</td>
-          <td>String</td>
-        </tr>
-        <tr>
-          <td>best_before_date</td>
-          <td>Expiration date (month year)</td>
-          <td>Date</td>
-        </tr>
-        <tr>
-          <td>amount</td>
-          <td>Amount available in our store</td>
-          <td>Number</td>
-        </tr>
-        <tr>
-          <td>image</td>
-          <td>URL to an image of the product</td>
-          <td>URL</td>
-        </tr>
-      </tbody>
-    </table>
 
     <h2>Timestamps</h2>
     <p>Dates are returned in <em>MMMM YYYY</em> format.</p>
@@ -316,7 +316,7 @@
         <tr>
           <th>Status Code</th>
           <th>Status Title</th>
-          <th>Description</th>
+          <th>General description</th>
         </tr>
       </thead>
       <tbody>
