--- a/documentation.html
+++ b/documentation.html
@@ -152,9 +152,34 @@
         Date: Mon, 18 Jan 2021 14:16:29 GMT<br>
         ETag: W/"66-cZws74LP8XEnwbIEyLgWFw"<br>
         X-Powered-By: Express<br>
-        <br>
+        <br></code>
+        <h5>Example response format</h5>
+      <code>
         [{"id":13123,"product":"Apples","origin":"The Netherlands","best_before_date":"November 2019","amount":"100kg","image":"https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Apples.jpg/512px-Apples.jpg%22%7D]
       </code>
+      <h4>Possible error codes</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>Error code</th>
+            <th>Description of error</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     
     <!-- POST -->
@@ -204,6 +229,29 @@
         <br>
         Created
       </code>
+      <h4>Possible error codes</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>Error code</th>
+            <th>Description of error</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     
     <!-- PUT -->
@@ -250,6 +298,29 @@
         ETag: W/"a-oQDOV50e1MN2H/N8GYi+8w"<br>
         X-Powered-By: Express
       </code>
+      <h4>Possible error codes</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>Error code</th>
+            <th>Description of error</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <!-- DELETE -->
@@ -305,6 +376,29 @@
         ETag: W/"a-oQDOV50e1MN2H/N8GYi+8w"<br>
         X-Powered-By: Express
       </code>
+      <h4>Possible error codes</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>Error code</th>
+            <th>Description of error</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <h2>Timestamps</h2>
