--- a/documentation.html
+++ b/documentation.html
@@ -152,7 +152,7 @@
         Date: Mon, 18 Jan 2021 14:16:29 GMT<br>
         ETag: W/"66-cZws74LP8XEnwbIEyLgWFw"<br>
         X-Powered-By: Express<br>
-        <br></code>
+      </code>
         <h5>Example response format</h5>
       <code>
         [{"id":13123,"product":"Apples","origin":"The Netherlands","best_before_date":"November 2019","amount":"100kg","image":"https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Apples.jpg/512px-Apples.jpg%22%7D]
