--- a/documentation.html
+++ b/documentation.html
@@ -167,16 +167,16 @@
         </thead>
         <tbody>
           <tr>
-            <td></td>
-            <td></td>
+            <td>2XX</td>
+            <td>Successful <code>GET</code> request</td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
+            <td>4XX</td>
+            <td>There was an error on client side, <code>GET</code> could not find the resource.</td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
+            <td>5XX</td>
+            <td>Error occured on server side, <code>GET</code> could not access the resource.</td>
           </tr>
         </tbody>
       </table>
@@ -239,15 +239,15 @@
         </thead>
         <tbody>
           <tr>
-            <td></td>
+            <td>2XX</td>
+            <td><code></code></td>
+          </tr>
+          <tr>
+            <td>4XX</td>
             <td></td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td></td>
+            <td>5XX</td>
             <td></td>
           </tr>
         </tbody>
