--- a/documentation.html
+++ b/documentation.html
@@ -168,7 +168,7 @@
         <tbody>
           <tr>
             <td>2XX</td>
-            <td>Successful <code>GET</code> request</td>
+            <td>Successful <code>GET</code> request.</td>
           </tr>
           <tr>
             <td>4XX</td>
@@ -240,7 +240,7 @@
         <tbody>
           <tr>
             <td>2XX</td>
-            <td><code></code></td>
+            <td>Data <code>POST</code>ed successfully.</td>
           </tr>
           <tr>
             <td>4XX</td>
