--- a/documentation.html
+++ b/documentation.html
@@ -120,8 +120,6 @@
         <br>
         [{"id":13123,"product":"Apples","origin":"The Netherlands","best_before_date":"November 2019","amount":"100kg","image":"https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Apples.jpg/512px-Apples.jpg%22%7D]
       </code>
-<<<<<<< HEAD
-=======
       <h4>Possible error codes</h4>
       <table>
         <thead>
@@ -133,7 +131,7 @@
         <tbody>
           <tr>
             <td>2XX</td>
-            <td>Successful <code>GET</code> request.</td>
+            <td>Successful <code>GET</code> request</td>
           </tr>
           <tr>
             <td>4XX</td>
@@ -145,7 +143,6 @@
           </tr>
         </tbody>
       </table>
->>>>>>> c175b8f3436a1ecc6486c1c5ef11c38c77057bea
     </div>
     
     <!-- POST -->
@@ -195,8 +192,6 @@
         <br>
         Created
       </code>
-<<<<<<< HEAD
-=======
       <h4>Possible error codes</h4>
       <table>
         <thead>
@@ -208,7 +203,7 @@
         <tbody>
           <tr>
             <td>2XX</td>
-            <td>Data <code>POST</code>ed successfully.</td>
+            <td><code></code></td>
           </tr>
           <tr>
             <td>4XX</td>
@@ -220,7 +215,6 @@
           </tr>
         </tbody>
       </table>
->>>>>>> c175b8f3436a1ecc6486c1c5ef11c38c77057bea
     </div>
     
     <!-- PUT -->
@@ -267,6 +261,29 @@
         ETag: W/"a-oQDOV50e1MN2H/N8GYi+8w"<br>
         X-Powered-By: Express
       </code>
+      <h4>Possible error codes</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>Error code</th>
+            <th>Description of error</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2XX</td>
+            <td>Successful <code>PUT</code> request</td>
+          </tr>
+          <tr>
+            <td>4XX</td>
+            <td>There was an error on client side. Could not find the resource.</td>
+          </tr>
+          <tr>
+            <td>5XX</td>
+            <td>Error occured on server side.</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <!-- DELETE -->
@@ -322,6 +339,29 @@
         ETag: W/"a-oQDOV50e1MN2H/N8GYi+8w"<br>
         X-Powered-By: Express
       </code>
+      <h4>Possible error codes</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>Error code</th>
+            <th>Description of error</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>2XX</td>
+            <td>Successfully deleted resource</td>
+          </tr>
+          <tr>
+            <td>4XX</td>
+            <td>There was an error on client side. Could not find the resource.</td>
+          </tr>
+          <tr>
+            <td>5XX</td>
+            <td>Error occured on server side.</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <h2>Responses</h2>
