--- a/documentation.html
+++ b/documentation.html
@@ -172,7 +172,7 @@
           </tr>
           <tr>
             <td>4XX</td>
-            <td>There was an error on client side, <code>GET</code> could not find the resource.</td>
+            <td>There was an error on client side, could not find the resource to <code>GET</code>.</td>
           </tr>
           <tr>
             <td>5XX</td>
@@ -240,15 +240,15 @@
         <tbody>
           <tr>
             <td>2XX</td>
-            <td>Data <code>POST</code>ed successfully.</td>
+            <td>Data sent successfully.</td>
           </tr>
           <tr>
             <td>4XX</td>
-            <td></td>
+            <td>Data was not sent due to client error.</td>
           </tr>
           <tr>
             <td>5XX</td>
-            <td></td>
+            <td>Data was not sent due to server error</td>
           </tr>
         </tbody>
       </table>
