--- a/documentation.html
+++ b/documentation.html
@@ -59,6 +59,45 @@
       </tbody>
     </table>
 
+    <h2>Responses</h2>
+    <h3>Product object</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Key</th>
+          <th>Description</th>
+          <th>Type</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>product</td>
+          <td>The name of the product</td>
+          <td>String</td>
+        </tr>
+        <tr>
+          <td>origin</td>
+          <td>The country of origin of the product</td>
+          <td>String</td>
+        </tr>
+        <tr>
+          <td>best_before_date</td>
+          <td>Expiration date (month)</td>
+          <td>Date</td>
+        </tr>
+        <tr>
+          <td>amount</td>
+          <td>Amount available in our store</td>
+          <td>Number</td>
+        </tr>
+        <tr>
+          <td>image</td>
+          <td>URL to an image of the product</td>
+          <td>URL</td>
+        </tr>
+      </tbody>
+    </table>
+
     <h2>API Reference</h2>
 
     <!-- GET -->
@@ -363,45 +402,6 @@
         </tbody>
       </table>
     </div>
-
-    <h2>Responses</h2>
-    <h3>Product</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Key</th>
-          <th>Description</th>
-          <th>Type</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>product</td>
-          <td>The name of the product</td>
-          <td>String</td>
-        </tr>
-        <tr>
-          <td>origin</td>
-          <td>The country of origin of the product</td>
-          <td>String</td>
-        </tr>
-        <tr>
-          <td>best_before_date</td>
-          <td>Expiration date (month)</td>
-          <td>Date</td>
-        </tr>
-        <tr>
-          <td>amount</td>
-          <td>Amount available in our store</td>
-          <td>Number</td>
-        </tr>
-        <tr>
-          <td>image</td>
-          <td>URL to an image of the product</td>
-          <td>URL</td>
-        </tr>
-      </tbody>
-    </table>
 
     <h2>Timestamps</h2>
     <p>Dates are returned in <em>MMMM YYYY</em> format.</p>
