--- a/documentation.html
+++ b/documentation.html
@@ -277,6 +277,7 @@
         </tbody>
       </table>
       <h4>Example</h4>
+      <p>Annotation: request body in <code>PUT</code> requires an id parameter.</p>
       <h5>Request</h5>
       <code>
         PUT /api/products HTTP/1.1<br>
