--- a/documentation.html
+++ b/documentation.html
@@ -229,7 +229,7 @@
         ETag: W/"66-cZws74LP8XEnwbIEyLgWFw"<br>
         X-Powered-By: Express<br>
         <br>
-        Created
+        Created product
       </code>
       <h4>Possible error codes</h4>
       <table>
@@ -296,10 +296,12 @@
       </code>
       <h5>Response</h5>
       <code>
-        HTTP/1.1 204 No Content<br>
+        HTTP/1.1 200 OK<br>
         Date: Mon, 18 Jan 2021 14:31:35 GMT<br>
         ETag: W/"a-oQDOV50e1MN2H/N8GYi+8w"<br>
-        X-Powered-By: Express
+        X-Powered-By: Express<br>
+        <br>
+        Updated product
       </code>
       <h4>Possible error codes</h4>
       <table>
@@ -374,10 +376,12 @@
       </code>
       <h5>Response</h5>
       <code>
-        HTTP/1.1 204 No Content<br>
+        HTTP/1.1 200 OK<br>
         Date: Mon, 18 Jan 2021 14:31:35 GMT<br>
         ETag: W/"a-oQDOV50e1MN2H/N8GYi+8w"<br>
-        X-Powered-By: Express
+        X-Powered-By: Express<br>
+        <br>
+        Deleted product
       </code>
       <h4>Possible error codes</h4>
       <table>
