--- a/documentation.html
+++ b/documentation.html
@@ -376,7 +376,7 @@
       </code>
       <h5>Response</h5>
       <code>
-        HTTP/1.1 200 OK<br>
+        HTTP/1.1 204 No Content<br>
         Date: Mon, 18 Jan 2021 14:31:35 GMT<br>
         ETag: W/"a-oQDOV50e1MN2H/N8GYi+8w"<br>
         X-Powered-By: Express<br>
