--- a/documentation.html
+++ b/documentation.html
@@ -411,6 +411,10 @@
     <h2>Timestamps</h2>
     <p>Dates are returned in <em>MMMM YYYY</em> format.</p>
 
+    <h2>CORS</h2>
+    <p>CORS works for this server and is bound to one specific origin.</p>
+    <p>In order to make the server work with website, server.js needs to be changed - in CORS options at the top, change the origin.</p>
+
     <h2>Status Response Codes</h2>
     <table>
       <thead>
