--- a/documentation.html
+++ b/documentation.html
@@ -413,7 +413,7 @@
 
     <h2>CORS</h2>
     <p>CORS works for this server and is bound to one specific origin.</p>
-    <p>In order to make the server work with website, server.js needs to be changed - in CORS options at the top, change the origin.</p>
+    <p>In order to make the server work with website, server.js needs to be changed - in CORS options at the top, change the origin to the domain used for Bedrunka.</p>
 
     <h2>Status Response Codes</h2>
     <table>
