--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <th>Amount</th>
                 <!-- The class "no-sort" makes sure the Image column is not sortable -->
                 <th class="no-sort">Image</th>
+                <th class="no-sort">Delete product</th>
               </tr>
             </thead>
             <tbody>
