--- a/index.html
+++ b/index.html
@@ -101,10 +101,32 @@
               </tr>
             </tbody>
           </table>
-          <button type="submit">Add Product</button>
+          <button type="submit" class="btn-add-product">Add Product</button>
           <div class="btn-reset">Reset Data</div>
         </form>
       </div>
+    </section>
+
+    <!-- Search a product -->
+    <section>
+      <h2 class="table-header">Search Product</h2>
+      <input min="0" type="number" class="searchbar" placeholder="Enter Product ID">
+      <button type="submit" id="btn-search">Search</button>
+
+      <table id="table-search">
+        <thead>        
+          <tr>
+            <th>Product</th>
+            <th>Origin</th>
+            <!-- The class "sorter-dates" adds the custom date sorter -->
+            <th class="sorter-dates">Best before date</th>
+            <th>Amount</th>
+            <!-- The class "no-sort" makes sure the Image column is not sortable -->
+            <th class="no-sort">Image</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </section>
 
     <section id="employees">
