--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section id="featured">
       <h2 class='table-header'>Featured Products</h2>
       <div>
-        <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
+        <form>
           <!-- jQuery Tablesorter 2.0 requires the table to have a class "tablesorter" -->
           <table id="table-featured" class="tablesorter">
             <thead>        
@@ -89,6 +89,7 @@
                 <th>Amount</th>
                 <!-- The class "no-sort" makes sure the Image column is not sortable -->
                 <th class="no-sort">Image</th>
+                <th class="no-sort">Edit product</th>
                 <th class="no-sort">Delete product</th>
               </tr>
             </thead>
@@ -126,7 +127,8 @@
             <th class="no-sort">Image</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+        </tbody>
       </table>
     </section>
 
