--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <th>Amount</th>
                 <!-- The class "no-sort" makes sure the Image column is not sortable -->
                 <th class="no-sort">Image</th>
-                <th class="no-sort">Edit product</th>
-                <th class="no-sort">Delete product by ID</th>
+                <th class="no-sort"></th>
+                <th class="no-sort"></th>
               </tr>
             </thead>
             <tbody>
