--- a/client/index.html
+++ b/client/index.html
@@ -89,7 +89,6 @@
                 <th>Amount</th>
                 <!-- The class "no-sort" makes sure the Image column is not sortable -->
                 <th class="no-sort">Image</th>
-       
               </tr>
             </thead>
             <tbody>
@@ -117,11 +116,11 @@
       <table id="table-search">
         <thead>        
           <tr>
-            <th>Product</th>
-            <th>Origin</th>
+            <th class="no-sort">Product</th>
+            <th class="no-sort">Origin</th>
             <!-- The class "sorter-dates" adds the custom date sorter -->
-            <th class="sorter-dates">Best before date</th>
-            <th>Amount</th>
+            <th class="no-sort">Best before date</th>
+            <th class="no-sort">Amount</th>
             <!-- The class "no-sort" makes sure the Image column is not sortable -->
             <th class="no-sort">Image</th>
           </tr>
