--- a/client/index.html
+++ b/client/index.html
@@ -111,7 +111,7 @@
     <section>
       <h2 class="table-header">Search Product</h2>
       <input min="0" type="number" class="searchbar" placeholder="Enter Product ID">
-      <button type="submit" id="btn-search">Search</button>
+      <button type="submit" class="btn-search">Search</button>
 
       <table id="table-search">
         <thead>        
