--- a/client/index.html
+++ b/client/index.html
@@ -89,7 +89,6 @@
                 <th>Amount</th>
                 <!-- The class "no-sort" makes sure the Image column is not sortable -->
                 <th class="no-sort">Image</th>
-       
               </tr>
             </thead>
             <tbody>
@@ -112,16 +111,16 @@
     <section>
       <h2 class="table-header">Search Product</h2>
       <input min="0" type="number" class="searchbar" placeholder="Enter Product ID">
-      <button type="submit" id="btn-search">Search</button>
+      <button type="submit" class="btn-search">Search</button>
 
       <table id="table-search">
         <thead>        
           <tr>
-            <th>Product</th>
-            <th>Origin</th>
+            <th class="no-sort">Product</th>
+            <th class="no-sort">Origin</th>
             <!-- The class "sorter-dates" adds the custom date sorter -->
-            <th class="sorter-dates">Best before date</th>
-            <th>Amount</th>
+            <th class="no-sort">Best before date</th>
+            <th class="no-sort">Amount</th>
             <!-- The class "no-sort" makes sure the Image column is not sortable -->
             <th class="no-sort">Image</th>
           </tr>
