--- a/client/index.html
+++ b/client/index.html
@@ -109,7 +109,7 @@
 
     <!-- Search a product -->
     <section>
-      <h2 class="table-header">Search Product</h2>
+      <h2 class="table-header">Search & Edit Product</h2>
       <input min="0" type="number" class="searchbar" placeholder="Enter Product ID">
       <button type="submit" class="btn-search">Search</button>
 
