--- a/client/index.html
+++ b/client/index.html
@@ -117,7 +117,7 @@
         <table id="table-search">
           <thead>        
             <tr>
-              <th>ID</th>
+              <th class="no-sort">ID</th>
               <th class="no-sort">Product</th>
               <th class="no-sort">Origin</th>
               <!-- The class "sorter-dates" adds the custom date sorter -->
